assets/styles.css
body {
  background-color: black;
  color: lightgreen;
  font-family: "Times New Roman", Times, serif;
  font-size: 2.5rem;
  margin: 0;
  padding: 0;
}

header {
  padding: 1rem;
  text-align: center;
  background: #1abc9c;
  color: white;
  font-size: 5rem;
}

h1 {
  font-size: 6rem;
  margin: 1rem 2rem 0 2rem;
}

h2 {
  font-size: 5rem;
  margin: 1rem 2rem 0 2rem;
  text-align: center;
}

.box{
  margin: 2rem;
  padding: 2rem;
  background-color: #2a2a2a;
  border-radius: 25px;
}

p {
  font-size: 2.5rem;
  margin: 0rem 2rem 0 2rem;
}

form {
  margin: 2rem;
  padding: 2rem;
  background-color: #2a2a2a;
  border-radius: 25px;
}

label {
  font-size: 2.5rem;
}

input {
  margin: 0 0 1rem 0;
  width: 100%;
  height: 3rem;
  font-size: 2.5rem;
}

select {
  margin: 0;
  width: 100.7%;
  height: 3rem;
  font-size: 2.5rem;
  background-color: white;
  cursor: pointer;
}

.button {
  margin: 3rem 0 0 41%;
  background-color: #39495c;
  border-radius: 15px;
  font-size: 2.5rem;
  width: auto;
  height: auto;
  color: white;
  padding: 1rem;
  box-shadow: inset 0 -0.6em 1em -0.35em rgba(0, 0, 0, 0.17),
    inset 0 0.6em 2em -0.3em rgba(255, 255, 255, 0.15),
    inset 0 0 0em 0.05em rgba(255, 255, 255, 0.12);
  text-align: center;
  cursor: pointer;
}

input[type=radio] {
  border: 1px solid #fff;
  margin: 0.5em;
  padding: 1.5em;
  width: auto;
  size: 5em;
  -webkit-appearance: none;
  border-radius: 15px;
}



.red {
  background-color:  rgb(255, 80, 80);
}
.rred{
  color: rgb(255, 80, 80);
}

.green {
  background-color:  rgb(105, 255, 105);
}
.ggreen{
  color: rgb(105, 255, 105);
}

.blue {
  background-color:  rgb(62, 62, 255);
}
.bblue{
  color: rgb(62, 62, 255);
}

.black {
  background-color:  rgb(20, 20, 20);
}
.bblack{
  color: rgb(20, 20, 20);
}

.yellow {
  background-color:  rgb(252, 255, 63);
}
.yyellow{
  color: rgb(252, 255, 63);
}


@media only screen and (max-width: 600px) {
}

